--- a/package.json
+++ b/package.json
@@ -14,5 +14,9 @@
     "morgan": "~1.8.1",
     "multer": "^1.3.0",
     "serve-favicon": "~2.4.2"
+  },
+  "engines": {
+    "node": "4.2.6"
+
   }
 }
